--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".home_page.WelcomeScreen"
+            android:screenOrientation="portrait"
             android:theme="@style/CustomWelcomeScreenTheme"/>
         <activity
             android:name=".image_viewer.ImageViewerDialogActivity"
