--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         glideVersion = '4.11.0'
         fragment_version = "1.3.6"
         roomVersion = "2.4.0"
+        billing_version = "4.1.0"
     }
 }
 
@@ -17,14 +18,22 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('/Users/vishal.nehra/Documents/amaze_keys/amazeutils')
+            keyAlias 'amaze-utils'
+            storePassword 'yWiJU7RA^^'
+            keyPassword 'yWiJU7RA^^'
+        }
+    }
     compileSdk 31
 
     defaultConfig {
         applicationId "com.amaze.fileutilities"
         minSdk 19
         targetSdk 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -147,6 +156,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'com.github.tony19:logback-android:2.0.0'
     implementation 'com.stephentuso:welcome:1.4.1'
+    implementation("com.android.billingclient:billing:$billing_version")
 
     //Detect memory leaks
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
